feat: complete function solution for problem 6